--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Entry 5</title>
+    
 </head>
 
+<style>
+.bottom {
+    margin-bottom:100px;
+}
+</style>
 <body>
 
 <div>
@@ -20,8 +26,6 @@
     <div class= "faith_6">
 </div>
 
-
-
 <img class="faith_3" src="img/gifs/faith_3.gif"> 
 <img class="faith_6" src="img/gifs/faith_6.gif"> 
 <img class="faith_12" src="img/gifs/faith_12.gif">
@@ -30,6 +34,7 @@
 <img class="faith_14" src="img/gifs/faith_14.gif">
 <img class="faith_15" src="img/gifs/faith_15.gif">
 <img class="faith_16" src="img/gifs/faith_16.gif">
+<img class="faith_10" src="img/gifs/faith_10.gif">
 
 </body>
 </html>
