--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div>
-    <a href= =bxuMFX7AQE0hM36G>MORTIS</a>
+    <a href= https://youtu.be/io2cGEiUGWg?si=9kLFyV4hG5p9pVyS>MORTIS</a>
 </div>
 
 <h1>FAITH</h1>
