--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Demo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Page</title>
 </head>
 <body>
-    
-  <h1 class="title">Hello</h1>
-  <div class="static">
-  </div>
-  <div class="relative">
-  </div>
-  <div class="absolute">
-  </div>
-  <div class="fixed">
-  </div>
-  <div class="sticky">
-  </div>
-  
 </body>
 </html>
