--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <link rel="stylesheet" href="main.css">
+  <title>Home</title>
 </head>
 <body>
+
+<div>
+  <a href="index.html">Home</a>
+  <a href="entries/entry1/index.html">Entry 1</a>
+  <a href="entries/entry2/index.html">Entry 2</a>
+  <a href="entries/entry3/index.html">Entry 3</a>
+  <a href="entries/entry4/index.html">Entry 4</a>
+  <a href="entries/entry5/index.html">Entry 5</a>
+  <a href="entries/entry6/index.html">Entry 6</a>
+</div>
+
 </body>
 </html>
