--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -4,21 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
     <title>Entry 2</title>
 </head>
-<body>
-<img class= "img-knot" src="img/knottheory.jpeg" alt="" srcset="">
-<img class= "img-knot1" src="img/knotrope.png" alt="" srcset="">
-<img class= "img-knot2" src="img/knoth.png" alt="" srcset="">
-<img class= "img-knot3" src="img/knotrope copy.png" alt="" srcset="">
-<img class= "img-knot4" src="img/knothcopy.png" alt="" srcset="">
-<img class= "img-escher" src="img/escher_knot.png" alt="" srcset="">
-<div>
-    <a href= https://youtu.be/8DBhTXM_Br4?si> KNOT THEORY</a>
-</div>
 
-<div>
-    <h2>the study of closed curves in three dimensions</h2>
-</div> 
-</body>
-</html>
+
+<body>
+
+ <div class="container">
+    <div class="title">
+      <h1>Knot Theory</h1>
+
+      <div>
+        <a href="https://youtu.be/8DBhTXM_Br4?si=pBjYcOmLBv3ueeUw">
+        <button class="pill" type="button">Learn More</button>
+        </a>
+        </div>
+        <br>
+        <img src="assets/imgs/knot_1.png" alt="knot_1">
+      <br></br>
+      
+    </div>
+    <div class="content">
+    <h2>What is It?</h2>
+      <p>  
+        Knot theory, in mathematics, the study of closed curves in three dimensions, and their possible deformations without one part cutting through another. Knots may be regarded as formed by interlacing and looping a piece of string in any fashion and then joining the ends. The first question that arises is whether such a curve is truly knotted or can simply be untangled; that is, whether or not one can deform it in space into a standard unknotted curve like a circle. The second question is whether, more generally, any two given curves represent different knots or are really the same knot in the sense that one can be continuously deformed into the other.
+      </p>
+    <br>
+      <h2>What Makes it a Paradox?</h2>
+      <p>
+        The number of distinguishable knots increases rapidly as the order increases. 
+        For example, there are almost 10,000 distinct knots with 13 crossings, and over a million with 16 crossings—the highest known by the end of the 20th century. 
+        Certain higher-order knots can be resolved into combinations, called products, of lower-order knots; for example, the square knot and the granny knot (sixth-order knots) are products of two trefoils that are of the same or opposite chirality, or handedness. Knots that cannot be so resolved are called prime.
+      </p>
