--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+  <body>
+    <div class="home-button">
+      <a href="https://camae358.github.io/">Home</a>
+    </div>
+</body>
+
  <div class="container">
     <div class="title">
       <h1>The Banach-Tarski Paradox</h1>
@@ -21,7 +27,7 @@
         <br>
         <img src="assets/imgs/sphere_3.png" alt="sphere_1">
       <br></br>
-      
+
     </div>
     <div class="content">
     <h2>What is It?</h2>
