--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -8,16 +8,16 @@
     
 </head>
 
+<div class="home-button">
+    <a href="https://camae358.github.io/">Home</a>
+  </div>
+
 <style>
 .bottom {
     margin-bottom:100px;
 }
 </style>
 <body>
-
-<div>
-    <a href= https://youtu.be/io2cGEiUGWg?si=9kLFyV4hG5p9pVyS>MORTIS</a>
-</div>
 
 <h1>FAITH</h1>
 
