--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -8,6 +8,9 @@
     <title>Entry 2</title>
 </head>
 
+<div class="home-button">
+  <a href="https://camae358.github.io/">Home</a>
+</div>
 
 <body>
 
