--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -8,6 +8,9 @@
     <title>Entry 3 Remake</title>
 </head>
 <body>
+<div class="home-button">
+    <a href="https://camae358.github.io/">Home</a>
+</div>
 
 <h1>No Longer Human</h1>
 
