--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -7,7 +7,13 @@
     <title>Entry 4</title>
 </head>
 
-<body></body>
+<body>
+
+<div class="home-button">
+    <a href="https://camae358.github.io/">Home</a>
+</div>
+
+
 <img class= "vegas" src="img/vegas.jpg">
 
 <div>
