--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -8,9 +8,20 @@
     <title>Entry 2</title>
 </head>
 
-<div class="home-button">
-  <a href="https://camae358.github.io/">Home</a>
-</div>
+<header>
+  <img class="logo" src="assets/imgs/logo2.png" alt="logo">
+  <nav>
+    <ul class="nav_links">
+      <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
+      <li><a href="https://camae358.github.io/entries/entry2/index.html">Entry 1</a></li>
+      <li><a href="https://camae358.github.io/entries/entry3/index.html">Entry 3</a></li>
+      <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
+      <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
+      <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
+    </ul>
+  </nav>
+  <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
+</header>
 
 <body>
 
@@ -34,7 +45,7 @@
         Knot theory, in mathematics, the study of closed curves in three dimensions, and their possible deformations without one part cutting through another. Knots may be regarded as formed by interlacing and looping a piece of string in any fashion and then joining the ends. The first question that arises is whether such a curve is truly knotted or can simply be untangled; that is, whether or not one can deform it in space into a standard unknotted curve like a circle. The second question is whether, more generally, any two given curves represent different knots or are really the same knot in the sense that one can be continuously deformed into the other.
       </p>
     <br>
-      <h2>What Makes it a Paradox?</h2>
+      <h2>The Periodic Table of Knots</h2>
       <p>
         The number of distinguishable knots increases rapidly as the order increases. 
         For example, there are almost 10,000 distinct knots with 13 crossings, and over a million with 16 crossings—the highest known by the end of the 20th century. 
