--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -9,15 +9,10 @@
 
 <body>
 
-<div class="home-button">
-    <a href="https://camae358.github.io/">Home</a>
-</div>
-
-
 <img class= "vegas" src="img/vegas.jpg">
 
 <div>
-    <a href= https://youtu.be/WTKmaJa3Ci0?si=bxuMFX7AQE0hM36G>DO ANDROIDS DREAM OF ELECTRIC SHEEP?</a>
+    <a href= https://camae358.github.io>HOME</a>
 </div>
 
 <h1>BLADE RUNNER</h1>
