--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
 
-<div>
-  <a href="index.html">Home</a>
-  <a href="entries/entry1/index.html">Entry 1</a>
-  <a href="entries/entry2/index.html">Entry 2</a>
-  <a href="entries/entry3/index.html">Entry 3</a>
-  <a href="entries/entry4/index.html">Entry 4</a>
-  <a href="entries/entry5/index.html">Entry 5</a>
-  <a href="entries/entry6/index.html">Entry 6</a>
-</div>
+<header>
+  <img class="logo" src="assets/imgs/logo.png" alt="logo">
+  <nav>
+    <ul class="nav_links">
+      <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
+      <li><a href="https://camae358.github.io/entries/entry2/index.html">Entry 1</a></li>
+      <li><a href="https://camae358.github.io/entries/entry3/index.html">Entry 3</a></li>
+      <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
+      <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
+      <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
+    </ul>
+  </nav>
+  <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
+</header>
 
 </body>
 </html>
