--- a/entries/entry1/index.html
+++ b/entries/entry1/index.html
@@ -9,9 +9,20 @@
 </head>
 <body>
 
-<div class="home-button">
-	<a href="https://camae358.github.io/">Home</a>
-</div>
+	<header>
+		<img class="logo" src="assets/imgs/logo2.png" alt="logo">
+		<nav>
+		  <ul class="nav_links">
+			  <li><a href="entries/entry1/index.html">Entry 1</a></li>
+			  <li><a href="entries/entry2/index.html">Entry 1</a></li>
+			  <li><a href="entries/entry3/index.html">Entry 3</a></li>
+			  <li><a href="entries/entry4/index.html">Entry 4</a></li>
+			  <li><a href="entries/entry5/index.html">Entry 5</a></li>
+			  <li><a href="entries/entry6/index.html">Entry 6</a></li>
+		  </ul>
+		</nav>
+		<a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
+	  </header>	
 
 <br>
 <br>
