--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -8,10 +8,21 @@
     
 </head>
 
-<div class="home-button">
-    <a href="https://camae358.github.io/">Home</a>
-  </div>
-
+<header>
+    <img class="logo" src="img/logo2.png" alt="logo">
+    <nav>
+      <ul class="nav_links">
+          <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
+          <li><a href="https://camae358.github.io/entries/entry2/index.html">Entry 1</a></li>
+          <li><a href="https://camae358.github.io/entries/entry3/index.html">Entry 3</a></li>
+          <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
+          <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
+          <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
+      </ul>
+    </nav>
+    <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
+  </header>
+  
 <style>
 .bottom {
     margin-bottom:100px;
