--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
-    <title>Entry 3 Remake</title>
+    <title>Entry 3</title>
 </head>
 <body>
 
@@ -14,12 +14,12 @@
         <img class="logo" src="assets/img/logo2.png" alt="logo">
         <nav>
           <ul class="nav_links">
-              <li><a href="entries/entry1/index.html">Entry 1</a></li>
-              <li><a href="entries/entry2/index.html">Entry 1</a></li>
-              <li><a href="entries/entry3/index.html">Entry 3</a></li>
-              <li><a href="entries/entry4/index.html">Entry 4</a></li>
-              <li><a href="entries/entry5/index.html">Entry 5</a></li>
-              <li><a href="entries/entry6/index.html">Entry 6</a></li>
+            <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
+            <li><a href="https://camae358.github.io/entries/entry2/index.html">Entry 1</a></li>
+            <li><a href="https://camae358.github.io/entries/entry3/index.html">Entry 3</a></li>
+            <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
+            <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
+            <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
           </ul>
         </nav>
         <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
