--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
+  <link rel="preload" href="Gustavo-Medium.woff2" as="font" type="font/woff2" crossorigin>
   <title>Home</title>
 </head>
 <body>
 
 <header>
-  <img class="logo" src="assets/imgs/logo.png" alt="logo">
+  <img class="logo" src="assets/imgs/logo3.png" alt="logo">
   <nav>
     <ul class="nav_links">
       <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
@@ -20,8 +21,13 @@
       <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
     </ul>
   </nav>
-  <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
 </header>
+
+<h1>TECHNOLOGY AND EXISTENTIALISM</h1>
+
+<img src="assets/imgs/glitch.png" class="glitch">
+
+</div>
 
 </body>
 </html>
