--- a/entries/entry7/index.html
+++ b/entries/entry7/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zLuA0OIjNGk?si=v7oVuRtSi5KgxNM2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zLuA0OIjNGk?si=H-Yh9ef0encCI1MT&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
 
