--- a/entries/entry9/index.html
+++ b/entries/entry9/index.html
@@ -43,11 +43,15 @@
 
     <div class="container2">
         <div class="image-container2">
-            <img src="assets/imgs/frank2.png" alt="The Eyes of Frankenstein's Monster">
+            <img src="assets/imgs/frank3.png" alt="The Eyes of Frankenstein's Monster">
         </div>
         <div class="text-container2">
             <p>“I have love in me the likes of which you can scarcely imagine and rage the likes of which you would not believe. If I cannot satisfy the one, I will indulge the other.”</p>
         </div>
+    </div>
+
+    <div class="container3">
+        <p class="large-text">“There is something at work in my soul, which I do not understand.”</p>
     </div>
 
 </body>
