--- a/entries/entry10/index.html
+++ b/entries/entry10/index.html
@@ -6,6 +6,10 @@
     <title>Entry 10</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
+<a class="top-left-button" href="https://camae358.github.io/entries/entry9/index.html">Back</a>
+<a class="top-right-button" href="https://camae358.github.io/">Next</a>
+
 <body>
     <div id="arrayText" onclick="hideText()"></div>
     <script src="main.js"></script>
