--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -9,20 +9,19 @@
 
 <body>
 
+<a class="top-left-button" href="https://camae358.github.io/entries/entry3/index.html">Back</a>
+<a class="top-right-button" href="https://camae358.github.io/entries/entry5/index.html">Next</a>
+
 <img class= "vegas" src="img/vegas.jpg">
 
-<div>
-    <a href= https://camae358.github.io>HOME</a>
-</div>
 
 <h1>BLADE RUNNER</h1>
 
-<p>I'VE...SEEN THINGS YOU PEOPLE WOULDN'T BELIEVE...</p>
-<p1>ATTACK SHIPS ON FIRE OFF THE SHOULDER OF ORION...</p1>
-<p2>I WATCHED C-BEAMS GLITTER IN THE DARK NEAR THE TANNHÄUSER GATES.</p2>
-<p3>ALL THOSE...MOMENTS..WILL BE LOST IN TIME,</p3>
-<p4>LIKE TEARS...IN...RAIN.</p4>
-<p5>TIME...TO DIE...</p5>
+<p>I'VE...SEEN THINGS YOU PEOPLE WOULDN'T BELIEVE... ATTACK SHIPS ON FIRE OFF THE SHOULDER OF ORION...
+I WATCHED C-BEAMS GLITTER IN THE DARK NEAR THE TANNHÄUSER GATES.
+ALL THOSE...MOMENTS..WILL BE LOST IN TIME,
+LIKE TEARS...IN...RAIN.
+TIME...TO DIE...</p>
 
 </body>
 </html>
