--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -9,20 +9,9 @@
 </head>
 <body>
 
-  <header>
-    <img class="logo" src="assets/imgs/logo2.png" alt="logo">
-    <nav>
-      <ul class="nav_links">
-        <li><a href="https://camae358.github.io/entries/entry1/index.html">Entry 1</a></li>
-        <li><a href="https://camae358.github.io/entries/entry2/index.html">Entry 2</a></li>
-        <li><a href="https://camae358.github.io/entries/entry3/index.html">Entry 3</a></li>
-        <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
-        <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
-        <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
-      </ul>
-    </nav>
-    <a class="cta" href="https://camae358.github.io/"><button>Home</button></a>
-  </header>
+
+<a class="top-left-button" href="https://camae358.github.io/entries/entry5/index.html">Back</a>
+<a class="top-right-button" href="https://camae358.github.io/entries/entry7/index.html">Next</a>
 
  <div class="container">
     <div class="title">
