--- a/entries/entry9/index.html
+++ b/entries/entry9/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
 </head>
+<a class="top-left-button" href="https://camae358.github.io/entries/entry8/index.html">Back</a>
+<a class="top-right-button" href="https://camae358.github.io/entries/entry10/index.html">Next</a>
+
 <body>
 
     <div class="wobble-container">
@@ -24,6 +27,8 @@
         <p class="wobble-text">N</p>
     </div>
 
+
+    
     <div class="container">
         <div class="image-container">
             <img src="assets/imgs/frank1.png" alt="Frankenstein's Monster">
