--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <li><a href="https://camae358.github.io/entries/entry4/index.html">Entry 4</a></li>
       <li><a href="https://camae358.github.io/entries/entry5/index.html">Entry 5</a></li>
       <li><a href="https://camae358.github.io/entries/entry6/index.html">Entry 6</a></li>
+      <li><a href="https://camae358.github.io/entries/entry7/index.html">Entry 7</a></li>
+      <li><a href="https://camae358.github.io/entries/entry8/index.html">Entry 8</a></li>
+      <li><a href="https://camae358.github.io/entries/entry9/index.html">Entry 9</a></li>
+      <li><a href="https://camae358.github.io/entries/entry10/index.html">Entry 10</a></li>
     </ul>
   </nav>
 </header>
