--- a/entries/entry8/index.html
+++ b/entries/entry8/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entry 8</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
 </head>
 
 <body class="layout1">
+
+    <a class="top-left-button" href="https://camae358.github.io/entries/entry7/index.html">Back</a>
+    <a class="top-right-button" href="https://camae358.github.io/entries/entry9/index.html">Next</a>
+
     <div class="container">
         <img class="image" src="assets/imgs/scream.png" alt="A blue, distorted photograph of a man">
         <button class="pill-button" onclick="toggleLayout()">Run AM Protocol</button>
