--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -5,35 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Entry 5</title>
-    
 </head>
+<body>
 
 <a class="top-left-button" href="https://camae358.github.io/entries/entry4/index.html">Back</a>
 <a class="top-right-button" href="https://camae358.github.io/entries/entry6/index.html">Next</a>
   
-<style>
-.bottom {
-    margin-bottom:100px;
-}
-</style>
-<body>
+<div class="bottom">
+    <h1>FAITH</h1>
 
-<h1>FAITH</h1>
-
-<div class= "container"> 
-    <div class= "faith_3"> 
-    <div class= "faith_6">
+    <div class="flex-container">
+        <img class="faith_3" src="img/gifs/faith_3.gif"> 
+        <img class="faith_6" src="img/gifs/faith_6.gif"> 
+        <img class="faith_12" src="img/gifs/faith_12.gif">
+        <img class="faith_5" src="img/gifs/faith_5.gif">
+        <img class="faith_13" src="img/gifs/faith_13.gif">
+        <img class="faith_14" src="img/gifs/faith_14.gif">
+        <img class="faith_15" src="img/gifs/faith_15.gif">
+        <img class="faith_16" src="img/gifs/faith_16.gif">
+        <img class="faith_10" src="img/gifs/faith_10.gif">
+    </div>
 </div>
-
-<img class="faith_3" src="img/gifs/faith_3.gif"> 
-<img class="faith_6" src="img/gifs/faith_6.gif"> 
-<img class="faith_12" src="img/gifs/faith_12.gif">
-<img class="faith_5" src="img/gifs/faith_5.gif">
-<img class="faith_13" src="img/gifs/faith_13.gif">
-<img class="faith_14" src="img/gifs/faith_14.gif">
-<img class="faith_15" src="img/gifs/faith_15.gif">
-<img class="faith_16" src="img/gifs/faith_16.gif">
-<img class="faith_10" src="img/gifs/faith_10.gif">
 
 </body>
 </html>
