--- a/entries/entry10/index.html
+++ b/entries/entry10/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entry 10</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
 </head>
 
 <a class="top-left-button" href="https://camae358.github.io/entries/entry9/index.html">Back</a>
