--- a/entries/entry7/index.html
+++ b/entries/entry7/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.typekit.net/taa4vnq.css">
+    <script src="main.js" defer></script>
     <title>Entry 7</title>
     
 </head>
@@ -27,8 +28,9 @@
 <h1>IMMORTALITY</h1>
 
 <div class="flex-container">
-        <div class="image-container">
-           
+    <div class="image-container">
+      <img src="img/im_3.2.png" alt="A woman stands in the dark with a microphone, but they’re not singing, it's not the voice we’re familiar with. In fact, it's a song that exists in the real world. She’s singing “Candy Says” a song by Lou Reed and the Velvet Underground, specifically a cover of that song by another singer Anohni. But even though the woman isn’t singing, the emotion they’re conveying is off the charts. She smiles briefly, her gaze never touches the camera instead seeming to look for something within herself. Minutes into the song, one unbroken take, they start weeping and minutes after that they move off camera leaving us in the dark with the song still playing.
+          ">
         </div>
     <div class="svg-container">
         <svg id="film" data-name="film" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 771 771">
