--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="randomizeBtn">randomize</button>
     <button id="rotateReflectBtn">flip</button>
     <div class="bottom-link">
-      <a href="/Users/ecamarillo/Documents/GitHub/tool/mirror/index.html">
+      <a href="https://camae358.github.io/mirror">
         <button>switch mode</button>
       </a>
     </div>
